Fixed display section mobile

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,10 @@ footer a{
         width: 100%;
     }
 
+    .display-section {
+        width: 100%;
+    }
+
     footer {
         width: 100%;
     }
